# literate-xmonad-config

./: .gitignore  Makefile  README.org  build  stack.yaml  test  xmonad-config.cabal
src/: Main.hs  config.org
