cabal-version: 1.12

name:           xmonad-config
version:        0.1.0.0
description:    disconsis' xmonad config
homepage:       https://github.com/disconsis/xmonad-config
bug-reports:    https://github.com/disconsis/xmonad-config/issues
author:         Ketan Kanishka (disconsis)
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/disconsis/xmonad-config

executable xmonad
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:
      src

  main-is: Main.hs
  other-modules:

  build-depends:
      base
    , xmonad
    , xmonad-contrib
    , containers
    , process
    , unix

  default-extensions:
      FlexibleContexts
    , LambdaCase