cabal-version: 1.12

name:           xmonad-config
version:        0.1.0.0
description:    disconsis' xmonad config
homepage:       https://github.com/disconsis/literate-xmonad-config
bug-reports:    https://github.com/disconsis/literate-xmonad-config/issues
author:         Ketan Kanishka (disconsis)
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/disconsis/literate-xmonad-config

executable xmonad
  default-language: Haskell2010
  ghc-options: -O3 -threaded -rtsopts -with-rtsopts=-N

  hs-source-dirs:
      src

  main-is: Main.hs

  build-depends:
      base
    , relude
    , xmonad
    , xmonad-contrib
    , X11
    , process
    , unix
    , text
    , text-format
    , flow
    , filepath
    , directory
    , optparse-applicative

  default-extensions:
      FlexibleContexts
    , LambdaCase
    , NoImplicitPrelude
    , OverloadedStrings
    , NamedFieldPuns
    , RecordWildCards